--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -163,9 +163,9 @@
 \maketitle
 
 \begin{abstract}
-Today, eye trackers are extensively used in user interface evaluations. However, it's difficult to analyze and interpret eye tracking data from an aesthetic point of view. To find quantitative links between eye movements and aesthetic experience, we tracked 30 observers' eye movements during initial landings for 40 webpages (each was displayed for 3 seconds). The webpages were also rated based on the observers' aesthetic judgments.
+Today, eye trackers are extensively used in user interface evaluations. However, it's still hard to analyze and interpret eye tracking data from the aesthetic point of view. To find quantitative links between eye movements and aesthetic experience, we eye-tracked 30 observers' initial landings for 40 webpages (each was displayed for 3 seconds). The webpages were also rated based on the observers' subjective aesthetic judgments.
 
-Shannon entropy was used to analyze the eye tracking data. The result shows that the heatmap entropy (visual attention entropy, VAE) is highly correlated with the observers' aesthetic judgements of the webpages. VAE is interpreted as the chaos in observers' attentional processes. Its improved version, relative VAE (rVAE), has more significant correlation with the perceived aesthetics.(r=-0.65, F= 26.84, P<0.0001). This single metric alone can distinguish between good and bad looking pages with about 85\% accuracy. Further investigation reveals that the performance of both VAE and rVAE became stable after 1 second. The curves indicate that their performances could be better if the tracking time were extended beyond 3 seconds.
+Shannon entropy was introduced to analyze the eye tracking data. The result shows that the heatmap entropy (visual attention entropy, VAE) is highly correlated with the observers' aesthetic judgements of the webpages. Its improved version, relative VAE (rVAE), has more significant correlation with the perceived aesthetics (r=-0.65, F= 26.84, P<0.0001). This single metric alone can distinguish between good and bad looking pages with about 85\% accuracy. Further investigation reveals that the performance of both VAE and rVAE became stable after 1 second. The curves indicate that their performances could be better if the tracking time were extended beyond 3 seconds.
 \end{abstract}
 
 \category{H.5.m.}{Information Interfaces and Presentation
