--- a/tex/our_references.bib
+++ b/tex/our_references.bib
@@ -167,7 +167,8 @@
    publisher = {ACM},
    pages = {53-60},
    ISBN = {1581133278},
-   type = {Conference Proceedings}
+   type = {Conference Proceedings},
+   year = {2001}
 }
 
 @article{Khalighy2015,
@@ -363,5 +364,6 @@
    publisher = {ACM},
    pages = {1-10},
    ISBN = {1605582468},
-   type = {Conference Proceedings}
+   type = {Conference Proceedings},
+   year = {2009}
 }
