new tex format & already sent reviewing & author deleted

--- a/tex/our_references.bib
+++ b/tex/our_references.bib
@@ -52,8 +52,6 @@
    number = {3},
    pages = {56-95},
    ISSN = {0742-1222},
-   DOI = {10.2753/MIS0742-1222220303},
-   url = {http://www.tandfonline.com/doi/abs/10.2753/MIS0742-1222220303},
    year = {2005},
    type = {Journal Article}
 }
@@ -86,8 +84,6 @@
    pages = {201-204},
    abstract = {The time required for Ss to voice a target letter in a visual display was studied as a function of the spatial proximity of two kinds of noise elements (letters or disks) to the target and as a function of when the noise elements were presented following the onset of the target letter. The results were not consistent with a focusing model of attention or selective encoding. Instead, there appears to be a small area in the visual field (about 1 deg of angle) in which all stimuli are processed in detail.},
    ISSN = {1532-5962},
-   DOI = {10.3758/bf03212870},
-   url = {https://doi.org/10.3758/BF03212870},
    year = {1972},
    type = {Journal Article}
 }
@@ -100,8 +96,6 @@
    number = {3},
    pages = {56-95},
    ISSN = {0742-1222},
-   DOI = {10.2753/MIS0742-1222220303},
-   url = {http://www.tandfonline.com/doi/abs/10.2753/MIS0742-1222220303},
    year = {2005},
    type = {Journal Article}
 }
@@ -190,7 +184,6 @@
    number = {1},
    pages = {1-30},
    ISSN = {1073-0516},
-   DOI = {10.1145/1959022.1959023},
    year = {2011},
    type = {Journal Article}
 }
@@ -212,7 +205,6 @@
    title = {Understanding web browsing behaviors through Weibull analysis of dwell time},
    publisher = {ACM},
    pages = {379-386},
-   DOI = {10.1145/1835449.1835513},
    year = {2010},
    type = {Conference Paper}
 }
@@ -294,8 +286,6 @@
    number = {4},
    pages = {364-382},
    abstract = {We propose that aesthetic pleasure is a funnction of the perceiver's processing dynamics: The more fluently perceivers can process an object, the more positive their aesthetic response. We review variables known to influence aesthetic judgments, such as figural goodness, figure-ground contrast, stimulus repetition, symmetry, and prototypicality, and trace their effects to changes in processing fluency. Other variables that influence processing fluency, like visual or semantic priming, similarly increase judgments of aesthetic pleasure. Our proposal provides an integrative framework for the study of aesthetic pleasure and sheds light on the interplay between early preferences versus cultural influences on taste, preferences for both prototypical and abstracted forms, and the relation between beauty and truth. In contrast to theories that trace aesthetic pleasure to objective stimulus features per se, we propose that beauty is grounded in the processing experiences of the perceiver, which are in part a function of stimulus properties.},
-   DOI = {10.1207/s15327957pspr0804_3},
-   url = {http://journals.sagepub.com/doi/abs/10.1207/s15327957pspr0804_3},
    year = {2004},
    type = {Journal Article}
 }
@@ -307,13 +297,15 @@
    publisher = {ACM},
    pages = {2049-2058},
    ISBN = {1450318991},
-   type = {Conference Proceedings}
+   type = {Conference Proceedings},
+   year = {2013}
 }
 
 @article{Santella,
    author = {Santella, Anthony},
    title = {Eye Tracking for Aesthetics: Unexplored Possibilities},
    type = {Journal Article},
+   journal = {unknown},
    year = {2004}
 }
 
@@ -327,10 +319,13 @@
 }
 
 @article{Tole1983,
-   author = {Tole, JR and Stephens, AT and Vivaudou, M and Ephrath, AR and Young, LR},
-   title = {Visual scanning behavior and pilot workload},
-   year = {1983},
-   type = {Journal Article}
+title={Visual scanning behavior and pilot workload},
+author={Harris, R L and Tole, J R and Stephens, A T and Ephrath, A R},
+journal={Aviation, Space, and Environmental Medicine},
+volume={53},
+number={11},
+pages={1067},
+year={1982}
 }
 
 @article{Tractinsky2000,
@@ -343,8 +338,6 @@
    note = {10.1016/S0953-5438(00)00031-X},
    abstract = {An experiment was conducted to test the relationships between users' perceptions of a computerized system's beauty and usability. The experiment used a computerized application as a surrogate for an Automated Teller Machine (ATM). Perceptions were elicited before and after the participants used the system. Pre-experimental measures indicate strong correlations between system's perceived aesthetics and perceived usability. Post-experimental measures indicated that the strong correlation remained intact. A multivariate analysis of covariance revealed that the degree of system's aesthetics affected the post-use perceptions of both aesthetics and usability, whereas the degree of actual usability had no such effect. The results resemble those found by social psychologists regarding the effect of physical attractiveness on the valuation of other personality attributes. The findings stress the importance of studying the aesthetic aspect of human–computer interaction (HCI) design and its relationships to other design dimensions.},
    ISSN = {0953-5438},
-   DOI = {10.1016/S0953-5438(00)00031-X},
-   url = {http://dx.doi.org/10.1016/S0953-5438(00)00031-X},
    year = {2000},
    type = {Journal Article}
 }
@@ -354,7 +347,8 @@
    title = {Aesthetic appraisal of art-from eye movements to computers},
    booktitle = {Computational aesthetics},
    pages = {137-144},
-   type = {Conference Proceedings}
+   type = {Conference Proceedings},
+   year = {2009}
 }
 
 @inproceedings{Zheng,
